idk why this had a multiplier of 0.15 but ok ig that's fixed now